exports[`Photo component should handle onClick event 1`] = `
<div
  className="pho-photo"
  style={Object {}}>
  <div>
    <span
      className="pho-photo-select"
      data-input="checkbox"
      onClick={[Function]}>
      <input
        checked={false}
        type="checkbox" />
      <label />
    </span>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/mock/33dda00f0eec15bc3b3c59a615001ac8">
      <img
        alt="MonImage.jpg"
        className="pho-photo-item"
        onLoad={[Function]}
        src="http://cozy.local:8080/files/download/33dda00f0eec15bc3b3c59a615001ac8"
        style={
          Object {
            "display": "none",
          }
        } />
    </Link>
  </div>
</div>
`;

exports[`Photo component should handle onLoad img event correctly 1`] = `
<div
  className="pho-photo"
  style={Object {}} />
`;

exports[`Photo component should render correctly an image according a photo object and the router path 1`] = `
<div
  className="pho-photo"
  style={Object {}}>
  <div>
    <span
      className="pho-photo-select"
      data-input="checkbox"
      onClick={[Function]}>
      <input
        checked={false}
        type="checkbox" />
      <label />
    </span>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/mock/33dda00f0eec15bc3b3c59a615001ac8">
      <img
        alt="MonImage.jpg"
        className="pho-photo-item"
        onLoad={[Function]}
        src="http://cozy.local:8080/files/download/33dda00f0eec15bc3b3c59a615001ac8"
        style={
          Object {
            "display": "none",
          }
        } />
    </Link>
  </div>
</div>
`;

exports[`Photo component should render correctly with a box parameter with height property set 1`] = `
<div
  className="pho-photo"
  style={
    Object {
      "height": "100px",
    }
  } />
`;

exports[`Photo component should render correctly with a box parameter with no properties 1`] = `
<div
  className="pho-photo"
  style={Object {}} />
`;

exports[`Photo component should render correctly with a box parameter with width property set 1`] = `
<div
  className="pho-photo"
  style={
    Object {
      "width": "100px",
    }
  } />
`;
